--- a/index.html
+++ b/index.html
@@ -29,9 +29,60 @@
             type="text"
             class="form-controll"
             name=""
-            id=""
+            id="movie-search-box"
             placeholder="Search movie Title....."
           />
+
+          <div class="search-list" id="search-list">
+            <div class="search-list-item">
+              <div class="search-item-nail">
+                <img
+                  src="image/supergeroi-protiv-kiborga-na-svalke.jpg"
+                  alt=""
+                />
+              </div>
+
+              <div class="search-item-info">
+                <h3>Bu kinoni kurganmisan kur zur kino ekan...</h3>
+                <p>2015</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="result-container">
+          <div class="result-grid" id="result-grid">
+            <div class="movie-poster">
+              <img
+                src="image/gi-joe-brosok-kobry-2-gi-dzho-vozmezdie-bryus-uillis-dzho-koltona-edriann-paliki-paliki-ledi-dzhej-duejn-dzhonson-dorozhnye.jpg"
+                alt="movie-poster"
+              />
+            </div>
+
+            <div class="movie-info">
+              <h3 class="movie-title">qalaysan ishlaring yaxshimi zurmisan</h3>
+              <ul class="movie-misc-info">
+                <li class="year">Year:2015</li>
+                <li class="rated">Ratings:PG-13</li>
+                <li class="released">Released:05 May 2017</li>
+              </ul>
+              <p class="genre"><b>Genre:</b>Action,Adventure,Comedy</p>
+              <p class="writer">
+                <b>Writer:</b>James Gunn,Domm Abnoted,Andy Landing
+              </p>
+              <p class="actors"><b>Actors:</b>Chris Partt,Zoe Saldan</p>
+              <p class="plot">
+                <b>Plot:</b>The guard struggle to keep together as a teacher
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Asperiores illum cupiditate quibusdam modi itaque officiis alias
+                dolor rerum excepturi beatae?
+              </p>
+              <p class="language"><b>Language:</b>English</p>
+              <p class="awards"><b><i class="fas fa-award"></i></b>nominated for Ockar</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
