--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <div class="logo">
         <div class="container">
-          <p>Movie<span>Corn</span></p>
+          <p>Movie<span>Dos</span></p>
         </div>
       </div>
 
@@ -36,10 +36,10 @@
           <div class="search-list" id="search-list">
             <div class="search-list-item">
               <div class="search-item-nail">
-                <img
+                <!-- <img
                   src="image/supergeroi-protiv-kiborga-na-svalke.jpg"
                   alt=""
-                />
+                /> -->
               </div>
 
               <div class="search-item-info">
@@ -80,7 +80,9 @@
                 dolor rerum excepturi beatae?
               </p>
               <p class="language"><b>Language:</b>English</p>
-              <p class="awards"><b><i class="fas fa-award"></i></b>nominated for Ockar</p>
+              <p class="awards">
+                <b><i class="fas fa-award"></i></b>nominated for Ockar
+              </p>
             </div>
           </div>
         </div>
